--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 final-dataframe.csv filter=lfs diff=lfs merge=lfs -text
+Final-dataframe.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.ipynb filter=lfs diff=lfs merge=lfs -text
 *.xlsx filter=lfs diff=lfs merge=lfs -text
